# weather

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml  template.env
.github/workflows/: main_build.yml  pr_build.yml  release.yml
hurl/: accuweather.hurl  aerisweather.hurl  openweathermap.hurl  weatherapi.hurl
hurl_responses/: accuweather.json
src/: args.rs  capabilities.rs  command.rs  configuration.rs  lib.rs  main.rs  report.rs  types.rs  util.rs
src/providers/: accuweather.rs  mod.rs
src/providers/accuweather/: api.rs  mod.rs  tests.rs
src/providers/accuweather/fixtures/: current_weather_conditions.json  forecast_daily.json  forecast_hourly.json  historical_hourly.json  location.json  weather_conditions.json
src/providers/aerisweather/: api.rs  mod.rs  report.rs  tests.rs
src/providers/aerisweather/fixtures/: daily.json  hourly.json
src/providers/openweathermap/fixtures/: current_weather_condition.json  location.json
src/providers/weatherapi/: api.rs  mod.rs  report.rs  tests.rs
src/providers/weatherapi/fixtures/: current.json  forecast.json  history.json
tests/: accuweather.rs
