[package]
name = "weather"
version = "0.1.0"
edition = "2021"


[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = { version = "0.3.27" }

serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }

clap = { version = "4.2.0" }
dirs = { version = "5.0.0" }

reqwest = { version = "0.11.16" }
