[package]
name = "weather"
version = "0.1.1"
edition = "2021"


[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures = { version = "0.3.27" }

serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["raw_value"] }

clap = { version = "4.2.0", features = ["derive"] }
dirs = { version = "5.0.0" }

reqwest = { version = "0.11.16", features = ["json"] }
anyhow = "1.0.70"
dialoguer = { version = "0.10.3", features = [
    "tempfile",
    "zeroize",
    "password",
], default-features = false }
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
wiremock = { version = "0.5.17" }
